--- a/DietTrackerBlazorServer/_Imports.razor
+++ b/DietTrackerBlazorServer/_Imports.razor
@@ -12,3 +12,5 @@
 @using DietTrackerBlazorServer.Model
 @using Blazorise
 @using Blazorise.DataGrid
+@using Blazorise.Snackbar
+@using Blazorise.Charts
