Properly scaffolded ASP.NET Identity, built initial model and database.
Created initial model derived from IdentityUser and IdentityDbContext base classes. Identity pages Login, Logout and Register scaffolded. Initial database creation migration created and tested.

--- a/DietTrackerBlazorServer/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/DietTrackerBlazorServer/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using DietTrackerBlazor_DOTNET_5_0.Areas.Identity
-@using DietTrackerBlazor_DOTNET_5_0.Areas.Identity.Pages
+@using Microsoft.AspNetCore.Identity
+@using DietTrackerBlazorServer.Areas.Identity
+@using DietTrackerBlazorServer.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using DietTrackerBlazorServer.Model
