--- a/DietTrackerBlazorServer/Pages/Index.razor
+++ b/DietTrackerBlazorServer/Pages/Index.razor
@@ -2,8 +2,12 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<Jumbotron>
+    <JumbotronTitle>Welcome to Diet Tracker!</JumbotronTitle>
+    <Paragraph>You can use this app to keep track of what you have eaten and how your health changes over time.</Paragraph>
+    <Paragraph>Please <a href="/Identity/Account/Login">login</a> to get started.</Paragraph>
+</Jumbotron>
 
-Welcome to your new app.
+@code{
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+}
