--- a/DietTrackerBlazorServer/Pages/_ViewImports.cshtml
+++ b/DietTrackerBlazorServer/Pages/_ViewImports.cshtml
@@ -1,6 +1,7 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using DietTrackerBlazor_DOTNET_5_0.Areas.Identity
+@using Microsoft.AspNetCore.Identity
+@using DietTrackerBlazorServer.Areas.Identity
+@using DietTrackerBlazorServer.Model
 
 
-DietTrackerBlazor_DOTNET_5_0.Pages
+DietTrackerBlazorServer.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
