--- a/DietTrackerBlazorServer/Pages/_Layout.cshtml
+++ b/DietTrackerBlazorServer/Pages/_Layout.cshtml
@@ -18,6 +18,7 @@
 
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
+    <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
