--- a/DietTrackerBlazorServer/Pages/Index.razor
+++ b/DietTrackerBlazorServer/Pages/Index.razor
@@ -5,7 +5,7 @@
 <Jumbotron>
     <JumbotronTitle>Welcome to Diet Tracker!</JumbotronTitle>
     <Paragraph>You can use this app to keep track of what you have eaten and how your health changes over time.</Paragraph>
-    <Paragraph>Please <a href="/Identity/Account/Login">login</a> to get started.</Paragraph>
+    <Paragraph><a href="/HealthMetrics">Define a health metric</a> to get started.</Paragraph>
 </Jumbotron>
 
 @code{
