--- a/DietTrackerBlazorServer/Shared/MainLayout.razor
+++ b/DietTrackerBlazorServer/Shared/MainLayout.razor
@@ -43,6 +43,12 @@
                                     Stats
                                 </BarLink>
                             </BarItem>
+                            <BarItem>
+                                <BarLink To="ChartTest">
+                                    <BarIcon IconName="IconName.Code"></BarIcon>
+                                    Test
+                                </BarLink>
+                            </BarItem>
                         </BarStart>
                     </BarMenu>
                 </Bar>
