--- a/DietTrackerBlazorServer/_Imports.razor
+++ b/DietTrackerBlazorServer/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using DietTrackerBlazorServer
+@using DietTrackerBlazorServer.Pages
 @using DietTrackerBlazorServer.Shared
 @using DietTrackerBlazorServer.Data
 @using DietTrackerBlazorServer.Model
